--- a/css/core.css
+++ b/css/core.css
@@ -4,24 +4,45 @@ body {
 }
 #app {
     position: absolute;
+    padding: 0;
+    margin: 0;
     right: 0;
     left: 0;
     top: 0;
     bottom: 0;
     -webkit-transition: -webkit-transform 600ms;
+    transition: -webkit-transform 600ms;
 }
 
 #app.show-date-filter {
     -webkit-transform: translateY(150px);
+    transform: translateY(150px);
 }
 
 #map {
-    position: absolute;
+    position: absolute !important;
     right: 0;
     width: 80%;
     height: 100%;
     background-color: #f0e5d1;
 }
+
+#print-pane {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -99;
+}
+
+#map-print {
+    width: 18cm;
+    height: 22cm;
+}
+
 #filter-pane form, #info-pane {
     position: absolute;
     background: #fff;
@@ -49,6 +70,8 @@ body {
 }
 
 #graph-pane .close {
+    position: absolute;
+    right: 0;
     font-size: 30px;
     margin-right: 0.5em;
 }
@@ -60,8 +83,8 @@ body {
     position: relative;
 }
 
-.leaflet-top.leaflet-left {
-    position: relative;
+.leaflet-top {
+    top: 2.5em;
 }
 
 .checkbox .select {
@@ -124,6 +147,10 @@ body {
     -webkit-transition: opacity 100ms;
 }
 
+.marker.filtered {
+    opacity: 0.15;
+}
+
 .marker .outline {
     stroke-width: 2;
     stroke: #fff;
@@ -142,6 +169,7 @@ body {
 }
 
 .marker .marker-text {
+    display: none;
     position: absolute;
     font-size: 12px;
     top: 0;
