--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -258,12 +258,12 @@ hr {
   border: 0;
 }
 @media print {
-  * {
+/*  * {
     text-shadow: none !important;
     color: #000 !important;
     background: transparent !important;
     box-shadow: none !important;
-  }
+  }*/
   a,
   a:visited {
     text-decoration: underline;
