--- a/css/core.css
+++ b/css/core.css
@@ -19,6 +19,11 @@ body {
     transform: translateY(150px);
 }
 
+svg {
+    width: 100%;
+    height: 100%;
+}
+
 #map {
     position: absolute !important;
     right: 0;
