--- a/css/core.css
+++ b/css/core.css
@@ -161,7 +161,7 @@ svg {
     stroke: #fff;
 }
 
-.marker.hover .outline {
+.marker:hover .outline {
     stroke-width: 6;
     stroke: #fff;
     stroke-opacity: 0.7;
