Don't show filtered markers in print view
fixes #4

--- a/css/print.css
+++ b/css/print.css
@@ -75,6 +75,10 @@ h1, h2, h3 {
     display: block;
 }
 
+.marker.filtered {
+    display: none;
+}
+
 /* ------------- */
 /* CSS for print preview, overridden with @media rule below */
 /* ------------- */
