multiple download options (shp, csv) in bootstrap menu

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import "bootstrap.css";
+@import "../node_modules/bootstrap/dist/css/bootstrap.css";
 @import "leaflet.css";
 @import "chart.css";
 @import "core.css";
