--- a/css/popup.css
+++ b/css/popup.css
@@ -20,19 +20,24 @@
   display: block;
 }
 
-.mapboxgl-popup-content .title {
+.mapboxgl-popup-content .__mf_popup_title {
+  background-color: black;
+  width: 200px;
+  color: white;
+}
+
+.mapboxgl-popup-content .__mf_popup_title.__mf_popup_img {
   background-color: rgba(0,0,0,0.5);
   position: absolute;
   bottom: 0;
-  color: white;
   width: 100%;
 }
 
-.mapboxgl-popup-content .title h1, .mapboxgl-popup-content .title h2 {
+.mapboxgl-popup-content .__mf_popup_title h1, .mapboxgl-popup-content .__mf_popup_title h2 {
   margin: 5px 10px;
 }
 
-.mapboxgl-popup-content .title h2 {
+.mapboxgl-popup-content .__mf_popup_title h2 {
   font-style: normal;
   font-size: 14px;
 }
