Add field heuristics
This attempts to make a best guess at which fields to use for:
- Initial filter fields
- Title and subtitle on popup/modal
- Image / video
- Which field to color
If any of these values are set on `state` then that value is preferred. This should render something 'good enough' to start off, so the user does not need to configure any fields to start exploring data.

--- a/templates/popup.hbs
+++ b/templates/popup.hbs
@@ -1,7 +1,7 @@
-{{#if img}}
-<img src="http://resizer.digital-democracy.org/300/{{img}}">
+{{#if media}}
+<img src="http://resizer.digital-democracy.org/300/{{media}}">
 {{/if}}
-<div class="__mf_popup_title {{#if img}}__mf_popup_img{{/if}}">
+<div class="__mf_popup_title {{#if media}}__mf_popup_img{{/if}}">
   <h1>{{title}}</h1>
   <h2>{{subtitle}}</h2>
 </div>
